# HArDCore2D-Stokes

./: CMakeLists.txt  README.md
CMake/: FindMKL.cmake  concepts.cpp
Schemes/Stokes/: CMakeLists.txt  ParaviewFilter  Stokes.cpp  Stokes.hpp
Schemes/TestCase/: TestCase.hpp  TestCaseStefanPME.hpp  TestCaseTransient.hpp
runs/: README.txt
runs/Stokes/: AdjConsistency.cpp  CMakeLists.txt  Consistency.cpp  EquivNorm.cpp  LocalComplex.cpp  LocalComplexKernel.cpp  PotentialCurl.cpp  PotentialNabla.cpp  runtests.sh  testfunction.hpp
src/Common/: basis.hpp
src/HybridCore/: hybridcore.hpp
src/Mesh/: import_mesh.hpp
src/Quadrature/: quad1d.cpp  quad2d.cpp  quadraturerule.cpp
src/StokesCore/: CMakeLists.txt  patch_basis_hpp  stokescore.cpp  stokescore.hpp  tensorbasis.cpp  tensorbasis.hpp  xcurlstokes.cpp  xcurlstokes.hpp  xnabla.cpp  xnabla.hpp  xvl.cpp  xvl.hpp
