ADD_EXECUTABLE(Stokes Stokes.cpp) 
#SET(ITTERATIVE "ON")
IF(ITTERATIVE)
  target_compile_options(Stokes PRIVATE -fopenmp -Wno-volatile)
  TARGET_LINK_LIBRARIES(Stokes mesh quadrature stokescore plot -fopenmp)
  add_definitions(-DITTERATIVE_LU)
#ELSEIF(WITH_PASTIX)
#  set(BLA_VENDOR "OpenBLAS") # fail trying to find mkl if unset
#  find_package(PASTIX REQUIRED)
#  include_directories(${PASTIX_INCLUDES})
#  TARGET_LINK_LIBRARIES(Stokes mesh quadrature stokescore plot ${PASTIX_LIBRARIES})
#  add_definitions(-DWITH_PASTIX)
# PaStiX support no longer maintained and fail to compile with recent version (must use 5.x without MPI support)
ELSEIF(WITH_UMFPACKLU)
  find_package(UMFPACK REQUIRED)
  include_directories(${UMFPACK_INCLUDES})
  TARGET_LINK_LIBRARIES(Stokes mesh quadrature stokescore plot ${UMFPACK_LIBRARIES})
  add_definitions(-DWITH_UMFPACKLU)
ELSEIF(WITH_MKL)
  find_package(MKL REQUIRED)
  include_directories(${MKL_INCLUDE_DIR})
  target_link_options(Stokes PRIVATE LINKER:--no-as-needed)
  TARGET_LINK_LIBRARIES(Stokes mesh quadrature stokescore plot ${MKL_LIBRARY} pthread m dl)
  add_definitions(-DWITH_MKL)
ELSE() 
  TARGET_LINK_LIBRARIES(Stokes mesh quadrature stokescore plot)
ENDIF()

